# Advanced_Robot_Programming_Assignment2

./: CMakeLists.txt  Makefile  Makefiley  Obstacles.h  Obstacles.idl  ObstaclesPubSubTypes.cxx  ObstaclesPubSubTypes.h  ObstaclesPublisher.cxx  README.md  drone_simulator
backup_src/: CMakeLists.txt  ObstaclesApplication.cxx  ObstaclesApplication.hpp  ObstaclesPublisherApp.cxx  ObstaclesPublisherApp.hpp  ObstaclesSubscriberApp.cxx  ObstaclesSubscriberApp.hpp  Obstaclesmain.cxx  TargetsApplication.cxx  TargetsApplication.hpp  TargetsPublisherApp.cxx  TargetsPublisherApp.hpp  TargetsSubscriberApp.cxx  TargetsSubscriberApp.hpp  Targetsmain.cxx
idl_files/: CMakeLists.txt
include/: Obstacles.h  ObstaclesPubSubTypes.h  ObstaclesPublisher.h  ObstaclesSubscriber.h  Targets.h  TargetsPubSubTypes.h  TargetsPublisher.h  TargetsSubscriber.h  blackboard.h  dds_handler.h  globals.h
log/: attraction_log.txt  dds_error_log.txt  drone_log.txt  obstacle_log.txt  position_log.txt  repulsion_log.txt  target_log.txt  watchdog_log.txt
obstacle/: Obstacles.cxx  Obstacles.idl  ObstaclesPubSubMain.cxx  ObstaclesPublisher.h  ObstaclesSubscriber.cxx  ObstaclesSubscriber.h
src/: Obstacles.cxx  ObstaclesPubSubTypes.cxx  ObstaclesPublisher.cxx  ObstaclesSubscriber.cxx  Targets.cxx  TargetsPubSubMain.cxx  TargetsPubSubTypes.cxx  TargetsPublisher.cxx  TargetsSubscriber.cxx  blackboard.c  blackboard.h  dds_handler.cpp  dds_publisher.cpp  dds_publisher.h  dds_subscriber.cpp  dds_subscriber.h  drone.c  globals.c  globals.h  main.c  makefile_x64Linux2.6gcc  obstacles_targets.h
